--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 title: "Home"
 layout: blank
 ---
+<script type="text/javascript" src="js/hidebib.js"></script>
 <main>
   {% for page in paginator.posts %}
   <article>
