--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@ title: "Home"
 layout: blank
 ---
 <script type="text/javascript" src="js/hidebib.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <main>
   {% for page in paginator.posts %}
   <article>
